--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -43,7 +43,7 @@ jobs:
         # working, as it is needed in runtime.
         REPO_DIR: /srv/repo
         #
-        # Uncomment and modify the following line with your image name, otherwise no push will happen
+        # Uncomment and modify the following line with your image name, otherwise no push will happen2
         IMAGE_NAME: "roilhi/test_catalyst"
 
     # Lets us monitor disks getting full as images get bigger over time
