--- a/environment.yml
+++ b/environment.yml
@@ -13,4 +13,8 @@ dependencies:
   # Everyone wants to use nbgitpuller for everything, so let's do that
   - nbgitpuller=1.1.*
   # Add other packages here
-  # -
+   - scikit-learn
+   - pandas
+   - torch
+   - torchvision
+   - torchaudio
