--- a/environment.yml
+++ b/environment.yml
@@ -2,7 +2,7 @@
 # the conda packages that you need installed in your environment.
 channels:
   - conda-forge
-
+  - pytorch
 dependencies:
   - jupyter_contrib_nbextensions==0.5.1
   # Required until https://github.com/jupyterhub/repo2docker/pull/1196 is merged
@@ -13,8 +13,15 @@ dependencies:
   # Everyone wants to use nbgitpuller for everything, so let's do that
   - nbgitpuller=1.1.*
   # Add other packages here
-   - scikit-learn
-   - pandas
-   - torch
-   - torchvision
-   - torchaudio
+  - pip
+  - matplotlib
+  - jupyterlab
+  - ipympl
+  - pytorch
+  - torchvision
+  - torchtext
+  - opencv
+  - librosa
+  - cudatoolkit=11.0
+  - pip:
+    - torchviz
